--- a/Weather WebApp/index.html
+++ b/Weather WebApp/index.html
@@ -19,7 +19,7 @@
           </div>
 
           <div class=" sub container grant-location-container">
-               <button class="bto" data-grantAccess>Grant Access</button>
+               <button class="bto" data-grantAccess>Location Allow</button>
           </div>     
    
           
