--- a/Weather WebApp/index.html
+++ b/Weather WebApp/index.html
@@ -91,12 +91,12 @@
                     <p>rain</p>
                     <p data-rain></p>
                </div>
-                    <div class="credits">
-          <a href="https://linktr.ee/codewithvishal" target="_blank">
-            Created <span>🤍</span> by
-            <span>Vishal Kumar</span>
-          </a>
-        </div>
+             <div class="credits">
+                    <a href="https://linktr.ee/codewithvishal" target="_blank">
+                       Created <span>❤️</span> by
+                       <span>Vishal Kumar</span>
+                    </a>
+               </div>
     
         
      </div> 
